
Fri Dec 10 21:04:38 EST 1999
(StriderZ)

Make textbox scroll better...

-------------------------------------------------------------------------------

Sat Dec 11 13:00:12 GMT 1999
(gilbertt)

Commands to view urls in E-UrlWatch are now of the format:
command %s
Where %s is substituted with the url.
Eg. The default is now:
gnome-moz-remote --newwin "%s" &
But things like
netscape -remote openURL(%s)
will now work.

That's a really bad habit of mine :( Thanks to Matthew Crites
<mcrites@primenet.com> for pointing it out.

-------------------------------------------------------------------------------

Sat Dec 11 13:27:54 GMT 1999
(gilbertt)

Urm. I don't know if this was intended, but E-Slides never actually
Epplet_gadget_show()'s its image... Don't know when this happened...

-------------------------------------------------------------------------------

Sat Dec 11 17:47:32 GMT 1999
(gilbertt)

Don't try to open "/dev/null" as an image either.

Prevents those:

IMLIB ERROR: Cannot load image: /dev/null
All fallbacks failed.

messages. I have just used a NULL parameter instead, which I believe is
correct.

-------------------------------------------------------------------------------

Sun Dec 12 16:33:12 GMT 1999
(gilbertt)

E-Time wasn't saving its justification setting. Fixed.

-------------------------------------------------------------------------------

Sun Dec 12 23:47:03 EST 1999
(StriderZ)

Editing support for textboxes is bad^H^H^Hgoood....mmmmkay?

Still a little quirky, but I figured it was good enough to commit for now...

-------------------------------------------------------------------------------

Mon Dec 13 10:19:45 EST 1999
(StriderZ)

Textbox editing slightly less quirky...

-------------------------------------------------------------------------------

Mon Dec 13 09:54:54 PST 1999
(KainX)

This should fix the seg fault people have been seeing.  I also removed an
Esnprintf() and put the sprintf() back; that was a wrong replacement.