@@ -1608,3 +1608,11 @@ Mon Dec 13 09:54:54 PST 1999
 
 This should fix the seg fault people have been seeing.  I also removed an
 Esnprintf() and put the sprintf() back; that was a wrong replacement.
+
+-------------------------------------------------------------------------------
+
+Mon Dec 13 13:28:12 EST 1999
+(StriderZ)
+
+Textbox editing...
+
